<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        tools:context="com.example.maigoje.myapplication.Main3Activity">

    <RelativeLayout android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
                      android:layout_centerHorizontal="true"
                      android:layout_centerVertical="true">


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="center"
            android:textSize="40sp"
            android:layout_margin="20sp"
    />
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/name"
              android:textSize="20sp"
              android:layout_margin="4sp"
    />
    <EditText android:layout_width= "match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/email"
              android:id="@+id/mail"
              android:inputType="textEmailAddress"
              android:layout_margin="10sp"
    />

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/password"
              android:textSize="20sp"
              android:layout_margin="4sp"
    />
    <EditText android:layout_width= "match_parent"
              android:layout_height="wrap_content"
              android:hint="Password"
              android:id="@+id/passw"
              android:layout_margin="4sp"
    />
    <Button android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/registers"
            android:layout_gravity="center"
            android:id="@+id/butt"
            android:layout_margin="10sp"
            android:textColorHighlight="@color/colorPrimary"
    />

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Register?"
              android:id="@+id/login"
              android:layout_gravity="center"
              android:textSize="12sp"
    />

        </LinearLayout>

        <ProgressBar android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/pb"
                     android:layout_centerVertical="true"
                     android:layout_centerHorizontal="true"
                     android:visibility="gone"
        />

    </RelativeLayout>


</LinearLayout>
